# IMUInitialAlignment

./: CMakeLists.txt  README.md  main.cpp
include/: EulerAnglesCalculator.h  IMUDataReader.h  Plotter.h
src/: CMakeLists.txt  EulerAnglesCalculator.cpp  IMUDataReader.cpp  Plotter.cpp
